# pdf2xlsx

./: .gitignore  LICENSE  README.md  mise.toml  pdf2xlsx.spec  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-16-gui-converter.md
packaging/: build-deb.sh  homebrew-formula.rb  tap-update-formula.yml
scripts/: export_table_transformer.py
src/pdf2xlsx/: __main__.py  cli.py  extractor.py  models.py  postprocess.py  writer.py
src/pdf2xlsx/engines/: tabletransformer.py
src/pdf2xlsx/gui/: __main__.py  app.py  main_window.py  pdf_panel.py  xlsx_panel.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_gui.py  test_gui_integration.py  test_integration.py  test_models.py  test_postprocess.py  test_tabletransformer.py  test_writer.py
wix/: License.rtf  main.wxs
