[project]
name = "pdf2xlsx"
version = "0.1.0"
description = "Extract tables from PDFs into Excel workbooks"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
pdf2xlsx = "pdf2xlsx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
