[project]
name = "pdf2xlsx"
version = "0.1.0"
description = "Extract tables from PDFs into Excel workbooks"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "PySide6>=6.7",
]

[project.scripts]
pdf2xlsx = "pdf2xlsx.cli:app"
pdf2xlsx-gui = "pdf2xlsx.gui.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
]
